# atls-python

./: .flake8  .gitignore  README.md  pyproject.toml
python-package/: README.md  pyproject.toml  requirements.txt
python-package/sample/: aci_connect.py  aci_debug_policy.rego  connect_aci.py
python-package/src/atls/: __init__.py  atls_context.py  attested_https_connection.py  attested_requests.py  attested_tls_context.py  attested_urllib3.py  httpa_connection.py
python-package/src/atls/utils/: _httpa_connection_shim.py
python-package/src/atls/utils/requests/: __init__.py  adapter.py
python-package/src/atls/utils/urllib3/: __init__.py  patch.py
python-package/src/atls/validators/: __init__.py  az_aas_aci_validator.py  az_aas_cvm_validator.py  validator.py
python-package/src/atls/validators/azure/aas/: __init__.py  aci_validator.py  cvm_validator.py  shared.py
python-package/src/pyatls/: __init__.py  attested_https_connection.py  attested_tls_context.py
python-package/src/pyatls/validators/: __init__.py  az_aas.py  az_aas_aci_validator.py  az_aas_cvm_validator.py  validator.py
