[project]
name = "pyatls"
version = "0.0.1"
description = "A Python package that implements Attested TLS (aTLS)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography==41.0.3",
    "PyJWT==2.8.0",
    "pyOpenSSL==23.2.0",
    "urllib3==1.26.16",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
