[project]
name = "pyatls"
version = "0.0.3"
description = "A Python package that implements Attested TLS (aTLS)."
readme = "README.md"
authors = [{ name = "Opaque Systems", email = "pypi@opaque.co" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
keywords = [
    "confidential",
    "llm",
    "tls",
    "ssl",
    "atls",
    "attestation",
    "security",
    "privacy",
]
dependencies = [
    "cryptography",
    "PyJWT",
    "pyOpenSSL",
    "urllib3 >= 2.0.0, < 2.1.0",
]

[project.urls]
Homepage = "https://github.com/opaque-systems/atls-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
